<resources>
    <string name="facebook_app_id">366232103799689</string>
    <string name="fb_login_protocol_scheme">fb366232103799689</string>

    <string name="app_name">Placetogo</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <string name="home">Home</string>
    <string name="mission">Challenge</string>
    <string name="near_by">Near By</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>

    <string name="connect_to_facebook">Connect to Facebook</string>
    <string name="jom_play">Jom . Play</string>
    <string name="others">Others</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="what_s_in_your_mind">What\'s in your mind</string>
    <string name="home_mission_msg">Let\'s go for challenge!</string>


    //Welcome Screen String
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="WelComePageTitle">Welcome to PlaceToGo</string>
    <string name="WelcomePageContent">Thank you for installing. Prepare to get amazed. Lets Go!!</string>

    <string name="WelComePage2Title">Challenge Much?</string>
    <string name="WelcomePage2Content">Find traditional way of exploring boring? Well, here we have list of challenges for you to take and have an amusing experience with achievement points!!!</string>

    <string name="WelComePage3Title">Roam Around Alot?</string>
    <string name="WelcomePage3Content">Can\'t decide where to eat or go? Give it to us. We will find you the best yet nearest place you want to eat or visit.</string>

    <string name="WelComePage4Title">Just Say It!</string>
    <string name="WelcomePage4Content">Want to move around faster? Well you can use our speech recognition feature to look for a place to go instead of typing it out.</string>
    <string name="refresh">Refresh</string>
    <string name="home_nearby_msg">Need recommendation?</string>


    <string name="openingHoursText">Opening Hours</string>
    <string name="featuresText">Features</string>
    <string name="reasonsText">Reasons</string>
    <string name="tipsText">Tips</string>
    <string name="closeText">CLOSE</string>

    <string name="Challenge1">Challenge 1</string>
    <string name="Challenge1_Title">Dinosaurs in the city</string>
    <string name="Challenge1_Content">Well, dinosaurs is always under eye of government but above eyes of public.</string>
    <string name="Check_In">Check In</string>
    <string name="Challenge2">Challenge 2</string>
    <string name="Challenge2_Title">I watch the birth and death of kings</string>
    <string name="Challenge2_Content">I last beyond all living things\n
                                        I am the oldest in the land\n
                                        I am the greatest boulder, the finest sand\n
                                        I stand above the Penang \n
                                        Up, up it goes and yet never grows? </string>
    <string name="Challenge3">Challenge 3</string>
    <string name="Challenge3_Title">The Dragon?</string>
    <string name="Challenge3_Content">   I once killed the Thunder God, although I was fallen with him.\n
                                         My brother consumed the greatest god, while my sister was the ruler of hell.\n
                                         I left my posterity under this cruel world, living in the shrine, while they never grows. \n
                                         The shrine...the shrine......</string>
    <string name="Challenge4">Challenge 4</string>
    <string name="Challenge4_Title">The Collector</string>
    <string name="Challenge4_Content">  I am once the barrier from enemy \n
                                        Defending from the assault \n
                                        Even I was retired long time ago \n
                                        But I never ever forget to deliver the art of fight for my land\n
                                        With every part of my body.</string>

    <string name="no_tips_provided">No tips provided.</string>
    <string name="title_activity_maps">Map</string>

    <string name="title_activity_search">SearchActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
</resources>
