<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Theme.AppCompat.NoActionBar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.AppCompat.NoActionBar"
    tools:context="com.example.chungwei.placetogo.LoginActivity">

    <ImageView
        android:id="@+id/background_imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/back_image" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true">

        <TextView
            android:id="@+id/appName_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="12dp"
            android:shadowColor="#000000"
            android:shadowRadius="40"
            android:text="@string/app_name"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/sub_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/appName_textView"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="28dp"
            android:shadowColor="#000000"
            android:shadowRadius="40"
            android:text="@string/jom_play"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

        <Button
            android:id="@+id/facebookLogin_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/sub_textView"
            android:layout_centerHorizontal="true"
            android:layout_margin="16dp"
            android:backgroundTint="@color/com_facebook_blue"
            android:drawablePadding="30dp"
            android:drawableStart="@drawable/fb_logo"
            android:padding="18dp"
            android:paddingEnd="40dp"
            android:paddingStart="40dp"
            android:text="@string/connect_to_facebook"
            android:textSize="16sp" />
    </RelativeLayout>

</RelativeLayout>
