<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/challenge_color1"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/desc_padding">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_weight="0.30"
            app:srcCompat="@drawable/ic_challenge" />

        <TextView
            android:id="@+id/textViewChallenge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/Challenge1"
            android:textAlignment="viewStart"
            android:textColor="@android:color/white"
            android:textSize="@dimen/slide_title"
            android:textStyle="bold" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:orientation="vertical"
            android:paddingBottom="@dimen/challege_content_bottom_padding"
            android:paddingTop="@dimen/div_20dp">

            <TextView
                android:id="@+id/title_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:text="@string/Challenge1_Title" />

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/challenge_imageView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/div_200dp"
                android:background="@android:drawable/alert_dark_frame"
                tools:srcCompat="@drawable/challenge1" />

            <TextView
                android:id="@+id/content_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/div_5dp"
                android:fontFamily="sans-serif-condensed"
                android:paddingLeft="@dimen/desc_padding"
                android:paddingRight="@dimen/desc_padding"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="@dimen/slide_desc"
                tools:text="@string/Challenge1_Content" />

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/div_35dp"
                android:background="@drawable/round_edge_button_style"
                android:elevation="0dp"
                android:text="@string/Check_In"
                android:textAlignment="center" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>