<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/popUpCard"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewPlaceName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            tools:text="Title" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.v7.widget.CardView
                    android:id="@+id/imageCardView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    app:cardElevation="4dp">

                    <com.example.chungwei.placetogo.customViews.LocationImageView
                        android:id="@+id/imageViewPlace"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:scaleType="centerCrop"
                        tools:src="@drawable/back_image" />
                </android.support.v7.widget.CardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <LinearLayout
                        android:id="@+id/operationHoursLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingTop="@dimen/activity_vertical_margin">

                        <TextView
                            android:id="@+id/textViewOpeningHours"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_vertical"
                            android:layout_marginBottom="@dimen/div_5dp"
                            android:layout_marginStart="8dp"
                            android:foregroundGravity="top|center_vertical"
                            android:gravity="top|center_vertical"
                            android:text="@string/openingHoursText"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead" />

                        <TextView
                            android:id="@+id/textViewOpenHours"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_marginEnd="8dp"
                            android:layout_marginStart="8dp"
                            android:layout_weight="1"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                            tools:text="testing testing testing" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textViewTips"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="top|center_vertical"
                            android:layout_marginBottom="@dimen/div_5dp"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="@dimen/div_10dp"
                            android:gravity="top"
                            android:text="@string/tipsText"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead" />

                        <TextView
                            android:id="@+id/textViewTip"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginEnd="8dp"
                            android:layout_marginStart="8dp"
                            android:layout_weight="1"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                            tools:text="testing testing testing" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <android.support.v7.widget.AppCompatImageView
                        android:id="@+id/imageViewPhone"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/ripple_selector_gray"
                        android:clickable="true"
                        android:focusable="true"
                        android:padding="16dp"
                        android:src="@drawable/ic_phone" />

                    <android.support.v7.widget.AppCompatImageView
                        android:id="@+id/imageViewNavigation"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/ripple_selector_gray"
                        android:clickable="true"
                        android:focusable="true"
                        android:padding="16dp"
                        android:src="@drawable/ic_navigate" />

                    <android.support.v7.widget.AppCompatImageView
                        android:id="@+id/imageViewInfo"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:src="@drawable/ic_moreinfo"
                        android:visibility="gone" />
                </LinearLayout>

                <Button
                    android:id="@+id/buttonCancel"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/closeText"
                    android:textColor="@color/colorPrimary" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/ratingBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:src="@android:color/transparent"
        app:backgroundTint="@color/colorPrimary"
        app:elevation="8dp"
        app:fabSize="normal"
        app:layout_anchor="@id/imageCardView"
        app:layout_anchorGravity="bottom|end" />

    <TextView
        android:id="@+id/textViewRatingText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:elevation="8dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@android:string/ok"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:elevation="16dp"
        app:layout_anchor="@id/ratingBack"
        app:layout_anchorGravity="center_vertical|center_horizontal" />

</android.support.design.widget.CoordinatorLayout>

